Theme/src/bcd/css/_styles.scss
/* ... */
/* universalFilter */
.bcd-unifilter-widget {
  .bcd-unifilter-empty { /* displays empty message */
     text-transform: uppercase;
  }
  .bcd-unifilter-conj-container {
    display: flex;
    flex-direction: row;
    margin: 5px 0;

    .bcd-unifilter-conj-header {
      align-self: center;
      text-transform: uppercase;
      -webkit-transform: rotate(270deg); 
      -moz-transform: rotate(270deg);
      -ms-transform: rotate(270deg);
      -o-transform: rotate(270deg);
      transform: rotate(270deg);
      width: 22px;
      text-align:right;
      padding-right: 3px;
    }

    .bcd-unifilter-conj-spacer {
      align-self: stretch;
      background-color: #ccc;
    }
  }

  .bcd-unifilter-operator-container {
    /* dont display '-' for first item */
    .bcd-unifilter-multi-input-container .bcd-unifilter-multi-input-item:first-child .action-remove {
      display: none;
    }
    /* display '+' for last item only */
    .bcd-unifilter-multi-input-container .bcd-unifilter-multi-input-item:not(:last-child) .action-add {
      display: none
    }
  }

  .bcd-unifilter-expression {
    margin-left: 25px;
    margin-top: 5px;
    margin-bottom: 5px;
    > span {
      padding-left: 3;
      padding-right: 3px;
    }
    .bcd-unifilter-expression-name {
    }
    .bcd-unifilter-expression-name-nomapping {
      font-style: italic;
      color: $text-disabled-color;
    }
    .bcd-unifilter-expression-type-empty,
    .bcd-unifilter-expression-type-notempty {
      text-transform: uppercase;
    }
    .bcd-unifilter-expression-op {
    }
    .bcd-unifilter-expression-value {
    }
  }

  .bcd-unifilter-creator-container {
    margin-left: 25px;
    padding: 5px;
    border: 1px dashed #ccc;

    .bcd-unifilter-creator-container-closer:hover {
      cursor: pointer;
    }

    .bcd-unifilter-creator-container-closer:after {
      content: "\274C";
    }
  }
}


/* Paging Panel */
.bcdPagingPanel {
  table {
    border: 1px solid $border-color;
    tbody tr td {
      vertical-align: middle;
      text-align: right;
      padding: 0 .375em;
      @include con_color(#FFFFFF);
      select { border: none; }
    }

    .bcdPagingButtonActive,
    .bcdPagingCoutOfElements,
    .bcdPagingButton {
      border: 1px solid $border-color;
      white-space: nowrap;
    }
    .bcdPagingButtonActive,
    .bcdPagingButton {
      cursor: pointer;
    }
    .bcdPagingButtonActive {
 	    @include bcdSelected();
    }
    .bcdPagingSelectAction select { width: auto; }
  }
}

/* Grid and Scheduler */

.bcdGrid {
  
  > thead tr td,
  > tfoot tr td {
    text-align: left;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
  }

  .bcdGroupAction:after {
    padding: 0 .375em 0 .3em;
    @extend .btn-secondary;
    background-color: $secondary-button-color;
    border-color: $secondary-button-color;
    margin-right: .3em;
    content: "\2212";
    position: absolute;
    border: 1px solid;
    left: 0;
    top: 0;
  }

  .bcdCollapsed.bcdGroupAction:after {content: "\002B";}

  .bcdGroupAction { cursor: pointer; }

  .handsontable th.bcdClosed, .handsontable td.bcdClosed {border: 0; padding: 0; margin: 0; overflow:hidden;}

  td.bcdKey {}
  th.bcdKey { font-weight: bold; }
  th.bcdKey.ht__highlight { }

  .bcdReadOnly  {
    color: $text-disabled-color;
    font-style: italic;
  }
  .bcdDeleted {
    text-decoration: line-through;
    color: $grid-action-color;
  }
  .bcdInserted, .bcdModified {
    text-decoration: underline;
    color: $grid-action-color;
  }
  
  ul { list-style-type: none; padding: 0;}
  
}
.bcdGridEditor {
  .bcdPeriodChooser .bcdValue {
    width: 100%;
    display: inline-block;
  }
  textarea, input {
    padding: 0 .3em;
  }
  select {
   padding: 0em .3em 0 .1em;
  }
}

.bcdStatusModelEditor {
 .bcdControls {
   text-align: center;
   .bcdButton { margin: 5px; }
 }
 .bcdLoadContainer {max-height: 600px; overflow-y: auto; position: relative; margin: 5px;}
}

.bcdSchedulerHistory {
  span.bcdStatusOk { color: #00cc00; font-weight: bold; }
  span.bcdStatusOk:after { content: "\2713"; padding-left: 5px; } 
  span.bcdStatusBad { color: #cc0000; font-weight: bold; }
  span.bcdStatusBad:after { content: "!"; padding-left: 5px; }
}

.bcdTooltip.bcdSchedulerHistory {
  max-width: 300px;
  padding: 10px;
  text-overflow: ellipsis;
  overflow: hidden;
  word-break: break-all;
}

/* cube grouping editor */

#bcdGroupingEditor {
 
 table {
   margin-bottom: 1em;
 }
 
 .bcdClose {
   cursor: pointer;
   position: absolute;
   right: 0;
   top: 0;
 }
 .bcdClose:after {
   content: "\274C";
  }
 .bcdGE_level {
   font-weight: bold;
 }

 .bcdGE_remove .bcdButton, .bcdGE_add .bcdButton {
    @extend .btn-secondary;
    background-color: $secondary-button-color;
    border-color: $secondary-button-color;
  }
  
  .bcdGE_ok {
    margin-right: .3em; 
  }
  .bcdGE_add {
    margin-left: .3em;
  }

  .bcdSideBySideChooser,
  .bcdGroupingEditorList {
    width: 100%;

    li:hover {
      @include con_color($border-color);
    }
  }
  div {text-align: left; }

  .bcdCol4 {
    display: none;
  }
  
  #groupName {
    display:flex;
    .bcdGE_name { width: 100%;
      input { width: 100%; }
    }
    
  }
}

/* Ranking */

.bcdCubeRanking {

  .bcdCubeRankBad {
    width: 12px;
    background: url(../images/cube/warning.png) center center no-repeat;
  }

  span.bcdCubeRemoveRank,
  span.bcdCubeAddRank {
    @extend .btn-secondary;
    background-color: $secondary-button-color;
    border-color: $secondary-button-color;
    padding: .375em .75em;
    display: inline-block;
  }
  span.bcdCubeAddRank:after { content: "\002B"; }
  span.bcdCubeRemoveRank:after { content: "\2212"; }
}

/* Summary */

.bcdDnDSummary {
  ul {
    list-style: initial;
    border: none;
    li {
      padding-left: .375em;
      list-style-position: inside;
      list-style-type: disc;
      li {
        list-style-type: circle;
      }
    }
  }
}

/* Templates */

.bcdReportTemplateList {
  margin-bottom: 0 .375em;
}
/* ... */

